[package]
name = "ignix"
version = "0.2.0"
edition = "2021"
description = "High-performance Redis-compatible key-value store built with Rust"
license = "MIT"
authors = ["CycleChain.io <hello@cyclechain.io> (https://cyclechain.io)","Fatih Mert Doğancan <fatih.dogancan@cyclechain.io> (https://github.com/fatihmert)"]
homepage = "https://github.com/CycleChain/ignix"
repository = "https://github.com/CycleChain/ignix"
documentation = "https://docs.rs/ignix"
readme = "README.md"
keywords = ["redis", "database", "key-value", "cache", "server"]
categories = ["database", "caching", "network-programming"]


[lib]
name = "ignix"
path = "src/lib.rs"


[[bin]]
name = "ignix"
path = "src/bin/ignix.rs"


[dependencies]
anyhow = "1"
thiserror = "1"
bytes = "1"
mio = { version = "0.8", features = ["net", "os-poll"] }
parking_lot = "0.12"
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crossbeam = "0.8"
log = "0.4"
env_logger = "0.11"
socket2 = { version = "0.5", features = ["all"] }
hashbrown = "0.14"
dashmap = "6"
rustc-hash = "1"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"


[[bench]]
name = "exec"
harness = false


[[bench]]
name = "resp"
harness = false